fix konami overlap menu

--- a/src/components/Konami/Konami.scss
+++ b/src/components/Konami/Konami.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 999;
 
   .konami-layer {
     // prevent user action on iframe (trolololo)
